--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "4.17.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "typewriter-effect": "2.17.0"
   },
