--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pwv3",
+  "homepage": "http://0xJeremy.github.io/0xJeremy.github.io",
   "version": "0.0.1",
   "dependencies": {
     "@material-ui/core": "4.11.0",
@@ -17,7 +18,9 @@
     "local": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/**/*.js",
-    "prettier": "npx prettier --write src/"
+    "prettier": "npx prettier --write src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "license": "MIT",
   "eslintConfig": {
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "eslint-plugin-react": "7.23.2",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   }
 }
