--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "0xJeremy.github.io",
+  "homepage": "http://0xJeremy.github.io/0xJeremy.github.io",
   "version": "0.0.2",
   "dependencies": {
     "@material-ui/core": "4.11.0",
